--- a/package.json
+++ b/package.json
@@ -9,38 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroui/button": "^2.2.15",
-    "@heroui/react": "^2.7.4",
-    "@heroui/system": "^2.4.11",
-    "@heroui/theme": "^2.4.11",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@vercel/analytics": "^1.5.0",
+    "@heroui/button": "^2.2.30",
+    "@heroui/react": "^2.8.8",
+    "@heroui/system": "^2.4.26",
+    "@heroui/theme": "^2.4.26",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.10",
-    "lucide-react": "^0.479.0",
-    "next": "15.2.1",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
+    "framer-motion": "^12.34.0",
+    "lucide-react": "^0.563.0",
+    "next": "^16.1.6",
+    "next-themes": "^0.4.6",
+    "react": "^19.2.4",
     "react-countup": "^6.5.3",
-    "react-dom": "^19.0.0",
-    "react-intersection-observer": "^9.16.0",
-    "tailwind-merge": "^3.0.2",
+    "react-dom": "^19.2.4",
+    "react-intersection-observer": "^10.0.2",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.1",
+    "eslint": "^10",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
