--- a/.github/workflows/prettier-fix.yml
+++ b/.github/workflows/prettier-fix.yml
@@ -2,38 +2,32 @@ name: Prettier Auto Format
 
 on:
   push:
-    branches:
-      - main
+    branches: [main, develop]
 
 jobs:
   prettier:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Prettier
-        run: npx prettier --write .
+      - run: npm ci
+      - run: npx prettier --write .
 
       - name: Commit changes
         run: |
           if git diff --quiet; then
-            echo "No formatting changes"
+            echo "No formatting needed"
           else
             git config user.name "github-actions"
             git config user.email "github-actions@github.com"
             git add .
-            git commit -m "chore: format with prettier"
+            git commit -m "chore: format with prettier [skip ci]"
             git push
           fi
